[package]
name = "sixteen-years-of-success"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["cargo", "derive"] }
count-write = "0.1.0"
english-numbers = "0.3.3"
french-numbers = "1.2.0"
numbers = "0.1.2"
